<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.test.mybitcoin.registration.CreateAccountFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/create_account"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/your_phone_number"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:inputType="phone"
        android:background="@drawable/edit_text_background"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />
    
    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/text_active_background"
        android:text="@string/i_have_account"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />
</LinearLayout>