<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.test.mybitcoin.buy.BuyBTCFragment1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:padding="20dp"
                android:text="Доступный резерв: 15,37383838 BTC"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:text="@string/buy_BTC"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editBuyBtc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edit_text_background"
                android:inputType="numberDecimal"
                android:paddingStart="5dp"
                android:paddingTop="7dp"
                android:paddingEnd="5dp"
                android:paddingBottom="7dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:text="@string/set_address"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="2"
                    android:background="@drawable/edit_text_background"
                    android:paddingStart="5dp"
                    android:paddingTop="7dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="7dp"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:src="@drawable/qr_icon" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:text="@string/purpose"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editAppointment"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:gravity="top"
                android:background="@drawable/edit_text_background"
                android:inputType="textMultiLine"
                android:paddingStart="5dp"
                android:paddingTop="7dp"
                android:paddingEnd="5dp"
                android:paddingBottom="7dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textCourceExchange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:text="Курс обмена: 418 049.85 руб"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/textToPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:text="К оплате: 41 804.99 руб."
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonGoToPay"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                android:text="@string/go_to_pay"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>