<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.test.mybitcoin.buy.BuyBTCFragment2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textYouBuy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="30dp"
                android:paddingBottom="5dp"
                android:paddingEnd="20dp"
                android:text="Вы покупаете 0,1 BTC"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textToPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="30dp"
                android:paddingEnd="20dp"
                android:text="К оплате: 41 804.99 руб."
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:text="Отправьте  41 804.99 руб на кошелек платежного сервиса Qiwi"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textWalletNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_toStartOf="@id/imageCopy1"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:background="@drawable/edit_text_background"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:textColor="@android:color/black"
                    android:text="+70000472626"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageCopy1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_content_copy_black_24dp" />
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:text="@string/with_comment"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_toStartOf="@id/imageCopy2"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:background="@drawable/edit_text_background"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:textColor="@android:color/black"
                    android:text="7831"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageCopy2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_content_copy_black_24dp" />
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:text="@string/confirm_this"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
            <Button
                android:id="@+id/buttonPaid"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:background="@drawable/button_background"
                android:text="@string/i_paid"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>